appId: com.lifeos.mobile
---
- launchApp
- extendedWaitUntil:
    visible: "Dashboard"
    timeout: 10000
- tapOn: "Planner"
- assertVisible: "Planner"
- tapOn: 
    id: "fab-button" # using the FloatingActionButton
- tapOn: "Task Title"
- inputText: "Buy Groceries"
- tapOn: "Description"
- inputText: "Need milk and eggs"
- tapOn: "Create Task"
- assertVisible: "Buy Groceries"
- tapOn: 
    id: "checkbox-Buy Groceries"
- assertVisible: "Completed"
